objects/CN_Sales_Order_Item_Note__c.object
<CustomObject>
    <fields>
        <fullName>CN_Item_Note_Type__c</fullName>
        <label>Text Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Item_Note__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Order_Item_Number__c</fullName>
        <label>Order Item Number</label>
        <referenceTo>CN_Sales_Order_Item__c</referenceTo>
        <relationshipLabel>Sales Order Item Note</relationshipLabel>
        <relationshipName>Sales_Order_Item_Note</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Up_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Up Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Order Item Note</label>
    <nameField>
        <label>Sales Order Item Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Item Note</pluralLabel>
    <recordTypes>
        <fullName>CN_Sales_Order_Item_Note</fullName>
        <active>true</active>
        <label>CN Sales Order Item Note</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>